Archive2/0c/6a426cddf58a9a/output
main.cpp: In function 'std::string foo()':
main.cpp:4:17: error: ambiguating new declaration of 'std::string foo()'
 std::string foo() { return "0"; }
                 ^
main.cpp:3:5: note: old declaration 'int foo()'
 int foo() { return 0; }
     ^
